@startuml
'https://plantuml.com/class-diagram

entity "Car" as cars {
    * id : long <<generated>>
    + model : string
    + license_plate : string <<unique>>
    + brand : string
    + model : string
    + is_available : boolean
    + color : string
    + created_at : datetime
    + updated_at : datetime
    --
    + car_package_id <<FK>>
    + car_parameters_id <<FK>>
}

entity "CarPackage" as car_packages {
    + id : long <<generated>>
    + packageName : string
    + pricePerHour : int
    + created_at : datetime
    + updated_at : datetime
}

entity "CarParameters" as car_parameters {
    +  id : long <<generated>>
    +  number_of_doors : int
    +  number_of_seats : int
    +  fuel_type_id : int
    +  gear_box_id : int
    +  is_air_conditioning_available : boolean
}

cars }|--|| car_parameters
cars ||--|| car_packages

@enduml